--- a/src/share/man/man7/mirroring-ports.7
+++ b/src/share/man/man7/mirroring-ports.7
@@ -1,4 +1,4 @@
-.\" $OpenBSD: mirroring-ports.7,v 1.23 2012/01/30 17:09:10 espie Exp $
+.\" $OpenBSD: mirroring-ports.7,v 1.24 2013/01/08 19:44:13 rpe Exp $
 .\"
 .\" Copyright (c) 2000,2012 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: January 30 2012 $
+.Dd $Mdocdate: January 8 2013 $
 .Dt MIRRORING-PORTS 7
 .Os
 .Sh NAME
@@ -92,8 +92,8 @@ will append to this file each time it is run on the whole tree
 .Fl a )
 and only if the ports tree scan finishes without error.
 Each line is of the form
-.Bd -offset indent
-.Li timestamp SHA256(file) = sha
+.Bd -literal -offset indent
+timestamp SHA256(file) = sha
 .Ed
 .Pp
 denoting the first fime a file/sha entry was no longer seen in the ports tree.
