--- a/src/lib/libedit/editrc.5
+++ b/src/lib/libedit/editrc.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: editrc.5,v 1.24 2010/06/30 00:05:35 nicm Exp $
+.\"	$OpenBSD: editrc.5,v 1.25 2010/06/30 07:34:38 jmc Exp $
 .\"	$NetBSD: editrc.5,v 1.24 2009/04/11 22:17:52 wiz Exp $
 .\"
 .\" Copyright (c) 1997-2000 The NetBSD Foundation, Inc.
@@ -506,6 +506,13 @@ Move down one line.
 Editline extended command.
 .El
 .\" End of section automatically generated with makelist
+.Sh FILES
+.Bl -tag -width "~/.editrcXXX"
+.It Pa ~/.editrc
+User configuration file for the
+.Xr editline 3
+library.
+.El
 .Sh SEE ALSO
 .Xr editline 3 ,
 .Xr regex 3 ,
