--- a/src/share/man/man4/vio.4
+++ b/src/share/man/man4/vio.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: vio.4,v 1.5 2012/11/30 08:07:24 sf Exp $
+.\"     $OpenBSD: vio.4,v 1.6 2013/01/15 11:58:46 jmc Exp $
 .\"
 .\" Copyright (c) 2012 Stefan Fritsch <sf@sfritsch.de>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 30 2012 $
+.Dd $Mdocdate: January 15 2013 $
 .Dt VIO 4
 .Os
 .Sh NAME
@@ -27,7 +27,7 @@ The
 .Nm
 driver provides support for the
 .Xr virtio 4
-network interface provided by BHyVe, KVM, QEMU, and VirtualBox.
+network interface provided by bhyve, KVM, QEMU, and VirtualBox.
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr virtio 4
