--- a/src/share/man/man4/vioblk.4
+++ b/src/share/man/man4/vioblk.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: vioblk.4,v 1.4 2012/11/02 10:12:21 brad Exp $
+.\"     $OpenBSD: vioblk.4,v 1.5 2013/01/15 11:58:46 jmc Exp $
 .\"
 .\" Copyright (c) 2012 Stefan Fritsch <sf@sfritsch.de>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 2 2012 $
+.Dd $Mdocdate: January 15 2013 $
 .Dt VIOBLK 4
 .Os
 .Sh NAME
@@ -28,7 +28,7 @@ The
 .Nm
 driver provides a virtual disk using a
 .Xr virtio 4
-block device provided by BHyVe, KVM, QEMU, and VirtualBox.
+block device provided by bhyve, KVM, QEMU, and VirtualBox.
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr scsi 4 ,
