--- a/src/usr.sbin/iostat/iostat.8
+++ b/src/usr.sbin/iostat/iostat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: iostat.8,v 1.24 2010/08/08 12:36:50 jmc Exp $
+.\"	$OpenBSD: iostat.8,v 1.25 2011/02/10 14:52:35 millert Exp $
 .\"	$NetBSD: iostat.8,v 1.10 1996/10/25 18:21:57 scottr Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"	from: @(#)iostat.8	8.1 (Berkeley) 6/6/93
 .\"
-.Dd $Mdocdate: August 8 2010 $
+.Dd $Mdocdate: February 10 2011 $
 .Dt IOSTAT 8
 .Os
 .Sh NAME
@@ -149,7 +149,6 @@ Kilobytes transferred per disk transfer
 Transfers per second
 .It MB/s
 Megabytes transferred per second
-.Pp
 .El
 The alternate display format, (selected with
 .Fl D ) ,
