--- a/src/usr.sbin/pstat/pstat.8
+++ b/src/usr.sbin/pstat/pstat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pstat.8,v 1.43 2010/09/19 21:59:23 jmc Exp $
+.\"	$OpenBSD: pstat.8,v 1.44 2012/05/17 17:53:22 deraadt Exp $
 .\"	$NetBSD: pstat.8,v 1.9.4.1 1996/06/02 09:08:17 mrg Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993, 1994
@@ -30,7 +30,7 @@
 .\"
 .\"     from: @(#)pstat.8	8.4 (Berkeley) 4/19/94
 .\"
-.Dd $Mdocdate: September 19 2010 $
+.Dd $Mdocdate: May 17 2012 $
 .Dt PSTAT 8
 .Os
 .Sh NAME
@@ -282,7 +282,6 @@ VLOCKSWORK FS supports locking discipline.
 .It s
 VONSYNCLIST vnode is on syncer worklist.
 .El
-.Pp
 .It USE
 The number of references to this vnode.
 .It HOLD
