--- a/src/share/man/man4/vlan.4
+++ b/src/share/man/man4/vlan.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: vlan.4,v 1.34 2011/11/27 19:55:18 haesbaert Exp $
+.\" $OpenBSD: vlan.4,v 1.35 2012/08/18 08:44:25 jmc Exp $
 .\"
 .\" Copyright (c) 2000 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: November 27 2011 $
+.Dd $Mdocdate: August 18 2012 $
 .Dt VLAN 4
 .Os
 .Sh NAME
@@ -172,8 +172,8 @@ and
 .%U http://standards.ieee.org/getieee802/802.1.html
 .Re
 .Rs
+.%Q Provider Bridges, QinQ
 .%T IEEE 802.1AD standard
-.%U Provider Bridges, QinQ
 .Re
 .Sh AUTHORS
 Originally wollman@freebsd.org.
