--- a/src/share/man/man9/sosplice.9
+++ b/src/share/man/man9/sosplice.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sosplice.9,v 1.4 2013/01/17 16:04:58 bluhm Exp $
+.\"	$OpenBSD: sosplice.9,v 1.5 2013/01/17 22:55:24 bluhm Exp $
 .\"
 .\" Copyright (c) 2011-2013 Alexander Bluhm <bluhm@openbsd.org>
 .\"
@@ -141,7 +141,7 @@ socket buffer.
 .Pp
 For atomic protocols, either one complete packet is taken out, or
 nothing is taken at all if:
-the packet is bigger than the the drain's send buffer size, in which
+the packet is bigger than the drain's send buffer size, in which
 case the splicing gets aborted with an
 .Er EMSGSIZE
 error;
