--- a/src/share/man/man5/hostname.if.5
+++ b/src/share/man/man5/hostname.if.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hostname.if.5,v 1.58 2012/11/26 21:35:20 krw Exp $
+.\"	$OpenBSD: hostname.if.5,v 1.59 2012/12/27 08:26:43 jmc Exp $
 .\"	$NetBSD: hosts.5,v 1.4 1994/11/30 19:31:20 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)hosts.5	8.2 (Berkeley) 12/11/93
 .\"
-.Dd $Mdocdate: November 26 2012 $
+.Dd $Mdocdate: December 27 2012 $
 .Dt HOSTNAME.IF 5
 .Os
 .Sh NAME
@@ -202,7 +202,7 @@ the interface, such as 64.
 .It Li #
 Comments are allowed.
 Anything following a comment character is treated as a comment.
-.It Li \&! Ns Ar command-line
+.It Li \&! Ns Ar command
 Arbitrary shell commands can be executed using this directive, as
 long as they are available in the single-user environment (for
 instance,
