--- a/src/usr.bin/lex/flex.1
+++ b/src/usr.bin/lex/flex.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: flex.1,v 1.31 2011/06/08 20:22:02 jmc Exp $
+.\"	$OpenBSD: flex.1,v 1.32 2012/04/08 17:37:35 jmc Exp $
 .\"
 .\" Copyright (c) 1990 The Regents of the University of California.
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .\" WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 .\" PURPOSE.
 .\"
-.Dd $Mdocdate: June 8 2011 $
+.Dd $Mdocdate: April 8 2012 $
 .Dt FLEX 1
 .Os
 .Sh NAME
@@ -2870,7 +2870,7 @@ below for details.
 also provides a mechanism for controlling options within the
 scanner specification itself, rather than from the
 .Nm
-command-line.
+command line.
 This is done by including
 .Dq %option
 directives in the first section of the scanner specification.
