--- a/src/usr.sbin/adduser/adduser.8
+++ b/src/usr.sbin/adduser/adduser.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: adduser.8,v 1.40 2011/05/10 16:49:07 lum Exp $
+.\"	$OpenBSD: adduser.8,v 1.41 2011/05/11 07:05:35 lum Exp $
 .\"
 .\" Copyright (c) 1995-1996 Wolfram Schneider <wosch@FreeBSD.org>. Berlin.
 .\" All rights reserved.
@@ -25,7 +25,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $From: adduser.8,v 1.12 1996/08/28 17:54:13 adam Exp $
-.Dd $Mdocdate: May 10 2011 $
+.Dd $Mdocdate: May 11 2011 $
 .Dt ADDUSER 8
 .Os
 .Sh NAME
@@ -83,7 +83,7 @@ The options are as follows:
 .Op Ar fullname
 .Op Ar password
 .Xc
-Enter batch mode in which multiple users are specified on the command-line
+Enter batch mode in which multiple users are specified on the command line
 in a compact format.
 By default the password is assumed to already be properly encrypted.
 .It Fl check_only
