--- a/src/usr.bin/ssh/ssh-keygen.1
+++ b/src/usr.bin/ssh/ssh-keygen.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ssh-keygen.1,v 1.113 2013/01/18 08:39:04 jmc Exp $
+.\"	$OpenBSD: ssh-keygen.1,v 1.114 2013/01/18 21:48:43 jmc Exp $
 .\"
 .\" Author: Tatu Ylonen <ylo@cs.hut.fi>
 .\" Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -713,7 +713,7 @@ certificate on hand.
 A KRL specification consists of lines containing one of the following directives
 followed by a colon and some directive-specific information.
 .Bl -tag -width Ds
-.It Cm serial : Ar serial_number Op -serial_number
+.It Cm serial : Ar serial_number Ns Op - Ns Ar serial_number
 Revokes a certificate with the specified serial number.
 Serial numbers are 64-bit values, not including zero and may be expressed
 in decimal, hex or octal.
