--- a/src/share/man/man4/pipex.4
+++ b/src/share/man/man4/pipex.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pipex.4,v 1.2 2012/09/20 12:05:21 yasuoka Exp $
+.\"	$OpenBSD: pipex.4,v 1.3 2012/09/20 16:29:01 jmc Exp $
 .\"
 .\" Copyright (c) 2012 YASUOKA Masahiko <yasuoka@openbsd.org>
 .\" Copyright (c) 2010 SUENAGA Hiroki <hsuenaga@openbsd.org>
@@ -26,7 +26,7 @@
 .Pp
 .Fd #include <sys/socket.h>
 .Fd #include <sys/ioctl.h>
-.Fd #include <net/piepx.h>
+.Fd #include <net/pipex.h>
 .Sh DESCRIPTION
 .Nm
 is used with
