--- a/src/usr.sbin/smtpd/smtpctl.8
+++ b/src/usr.sbin/smtpd/smtpctl.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: smtpctl.8,v 1.37 2013/01/26 09:37:23 gilles Exp $
+.\" $OpenBSD: smtpctl.8,v 1.38 2013/01/26 14:13:25 jmc Exp $
 .\"
 .\" Copyright (c) 2006 Pierre-Yves Ritschard <pyr@openbsd.org>
 .\" Copyright (c) 2012 Gilles Chehade <gilles@poolp.org>
@@ -179,6 +179,8 @@ transfer (outgoing sessions)
 bounce
 .It
 scheduler
+.It
+lookup (aliases/virtual/forward expansion)
 .It
 stat
 .It
