--- a/src/share/man/man4/man4.loongson/glxclk.4
+++ b/src/share/man/man4/man4.loongson/glxclk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: glxclk.4,v 1.1 2013/02/04 10:47:14 pirofti Exp $
+.\"	$OpenBSD: glxclk.4,v 1.2 2013/02/05 06:44:20 pirofti Exp $
 .\"
 .\" Copyright (c) 2013 Paul Irofti.
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: February 4 2013 $
+.Dd $Mdocdate: February 5 2013 $
 .Dt GLXCLK 4 loongson
 .Os
 .Sh NAME
@@ -37,7 +37,7 @@ Chris Torek's paper on randomized sampling.
 .%A Steven Mccanne
 .%A Chris Torek
 .%T "A Randomized Sampling Clock for CPU Utilization Estimation and Code Profiling"
-.%B In Proc. Winter 1993 USENIX Conference
+.%B "In Proc. Winter 1993 USENIX Conference"
 .%D 1993
 .%P 387-394
 .%I USENIX Association
