--- a/src/share/man/man4/man4.loongson/glxclk.4
+++ b/src/share/man/man4/man4.loongson/glxclk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: glxclk.4,v 1.2 2013/02/05 06:44:20 pirofti Exp $
+.\"	$OpenBSD: glxclk.4,v 1.3 2013/02/05 07:29:42 jmc Exp $
 .\"
 .\" Copyright (c) 2013 Paul Irofti.
 .\"
@@ -34,7 +34,7 @@ Chris Torek's paper on randomized sampling.
 .Xr glxpcib 4 ,
 .Xr intro 4
 .Rs
-.%A Steven Mccanne
+.%A Steven McCanne
 .%A Chris Torek
 .%T "A Randomized Sampling Clock for CPU Utilization Estimation and Code Profiling"
 .%B "In Proc. Winter 1993 USENIX Conference"
