--- a/src/sbin/ifconfig/ifconfig.8
+++ b/src/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifconfig.8,v 1.229 2012/08/27 19:41:19 jmc Exp $
+.\"	$OpenBSD: ifconfig.8,v 1.230 2012/11/23 21:59:28 sthen Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)ifconfig.8	8.4 (Berkeley) 6/1/94
 .\"
-.Dd $Mdocdate: August 27 2012 $
+.Dd $Mdocdate: November 23 2012 $
 .Dt IFCONFIG 8
 .Os
 .Sh NAME
@@ -229,6 +229,11 @@ For example, a PPP interface such as
 is a member of the
 .Em ppp
 interface family group.
+.It
+.Xr pppx 4
+interfaces are members of the
+.Em pppx
+interface group.
 .It
 The interface(s) the default route(s) point to are members of the
 .Em egress
