--- a/src/usr.sbin/syslogd/syslogd.8
+++ b/src/usr.sbin/syslogd/syslogd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: syslogd.8,v 1.25 2009/10/22 12:35:53 sobrado Exp $
+.\"	$OpenBSD: syslogd.8,v 1.26 2009/10/22 15:02:13 sobrado Exp $
 .\"
 .\" Copyright (c) 1983, 1986, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -39,7 +39,7 @@
 .Sh SYNOPSIS
 .Nm syslogd
 .Bk -words
-.Op Fl dnu
+.Op Fl dhnu
 .Op Fl a Ar path
 .Op Fl f Ar config_file
 .Op Fl m Ar mark_interval
@@ -69,6 +69,8 @@ and do not disassociate from the controlling terminal.
 Specify the pathname of an alternate configuration file;
 the default is
 .Pa /etc/syslog.conf .
+.It Fl h
+Include the hostname when forwarding messages to a remote host.
 .It Fl m Ar mark_interval
 Select the number of minutes between
 .Dq mark
