--- a/src/sbin/fsck/fsck.8
+++ b/src/sbin/fsck/fsck.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fsck.8,v 1.30 2007/05/12 17:37:48 fkr Exp $
+.\"	$OpenBSD: fsck.8,v 1.31 2007/05/31 19:19:44 jmc Exp $
 .\"	$NetBSD: fsck.8,v 1.14 1996/10/03 20:08:29 christos Exp $
 .\"
 .\" Copyright (c) 1996 Christos Zoulas.  All rights reserved.
@@ -28,7 +28,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt FSCK 8
 .Os
 .Sh NAME
@@ -176,4 +176,5 @@ file system table
 .Xr growfs 8 ,
 .Xr mount 8 ,
 .Xr newfs 8 ,
-.Xr rc 8
+.Xr rc 8 ,
+.Xr scan_ffs 8
