--- a/src/share/man/man5/port-modules.5
+++ b/src/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.153 2013/02/04 13:33:04 jmc Exp $
+.\"	$OpenBSD: port-modules.5,v 1.154 2013/02/07 17:58:31 pascal Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: February 4 2013 $
+.Dd $Mdocdate: February 7 2013 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -568,6 +568,7 @@ Sets
 .Ev MODCLANG_VERSION
 which is also appended to
 .Ev SUBST_VARS .
+.It lang/erlang
 .It lang/ghc
 Sets
 .Ev ONLY_FOR_ARCHS ,
