--- a/src/share/man/man4/softraid.4
+++ b/src/share/man/man4/softraid.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: softraid.4,v 1.29 2012/01/02 08:24:44 jmc Exp $
+.\"	$OpenBSD: softraid.4,v 1.30 2012/08/14 01:08:19 dlg Exp $
 .\"
 .\" Copyright (c) 2007 Todd T. Fries   <todd@OpenBSD.org>
 .\" Copyright (c) 2007 Marco Peereboom <marco@OpenBSD.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: January 2 2012 $
+.Dd $Mdocdate: August 14 2012 $
 .Dt SOFTRAID 4
 .Os
 .Sh NAME
@@ -178,7 +178,9 @@ This is due to the scrub functionality not being currently implemented.
 .Pp
 Currently there is no automated mechanism to recover from failed disks.
 .Pp
-There is no boot support at this time for any disciplines.
+.Nm
+has boot support only for the CRYPTO and RAID 1 disciplines,
+and only on amd64 and i386 platforms.
 .Pp
 Sparc hardware needs to use fstype
 .Dq 4.2BSD
