--- a/src/etc/mail/README
+++ b/src/etc/mail/README
@@ -1,11 +1,11 @@
-$OpenBSD: README,v 1.4 2007/12/11 16:43:14 millert Exp $
+$OpenBSD: README,v 1.5 2008/09/27 19:17:10 martynas Exp $
 
 This directory contains the configuration files for sendmail(8) and
 spamd(8).  The source for the .cf files lives in /usr/share/sendmail/cf.
 You should make changes in the corresponding .mc file and not edit
 the .cf files directly.  Useful information may be found in
 /usr/share/sendmail/README, /usr/share/sendmail/TUNING, and
-/usr/share/doc/smm/08.sendmailop/op.me.  For details on enabling
+/usr/src/gnu/usr.sbin/sendmail/doc/op/op.me.  For details on enabling
 encrypted SMTP, see the starttls(8) man page.
 
 Sendmail configuration files:
