--- a/src/share/man/man4/bwi.4
+++ b/src/share/man/man4/bwi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bwi.4,v 1.35 2012/09/17 11:04:24 sthen Exp $
+.\" $OpenBSD: bwi.4,v 1.36 2013/02/14 07:40:42 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 17 2012 $
+.Dd $Mdocdate: February 14 2013 $
 .Dt BWI 4
 .Os
 .Sh NAME
@@ -39,18 +39,6 @@ Also known as
 mode, this is used when associating with an access point, through
 which all traffic passes.
 This mode is the default.
-.\" .It IBSS mode
-.\" Also known as
-.\" .Em IEEE ad-hoc
-.\" mode or
-.\" .Em peer-to-peer
-.\" mode.
-.\" This is the standardized method of operating without an access point.
-.\" Stations associate with a service set.
-.\" However, actual connections between stations are peer-to-peer.
-.\" .It Host AP
-.\" In this mode the driver acts as an access point (base station)
-.\" for other cards.
 .It monitor mode
 In this mode the driver is able to receive packets without
 associating with an access point.
