--- a/src/share/man/man4/midi.4
+++ b/src/share/man/man4/midi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: midi.4,v 1.26 2010/10/04 09:32:43 ratchov Exp $
+.\" $OpenBSD: midi.4,v 1.27 2013/01/08 13:51:20 jmc Exp $
 .\"
 .\" Copyright (c) 2006 Alexandre Ratchov <alex@caoua.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 4 2010 $
+.Dd $Mdocdate: January 8 2013 $
 .Dt MIDI 4
 .Os
 .Sh NAME
@@ -223,7 +223,6 @@ The device is already open by another process.
 .Xr envy 4 ,
 .Xr mpu 4 ,
 .Xr sb 4 ,
-.Xr sequencer 4 ,
 .Xr umidi 4 ,
 .Xr ym 4
 .Sh HISTORY
