--- a/src/usr.sbin/identd/identd.8
+++ b/src/usr.sbin/identd/identd.8
@@ -1,4 +1,4 @@
-.\"   $OpenBSD: identd.8,v 1.1 2013/03/18 00:34:48 dlg Exp $
+.\"   $OpenBSD: identd.8,v 1.2 2013/03/18 08:55:31 dlg Exp $
 .\"
 .\" Copyright (c) 2013 David Gwynne <dlg@openbsd.org>
 .\"
@@ -64,11 +64,19 @@ listens on the port indicated in the
 .Ql auth
 service description; see
 .Xr services 5 .
-.It Fl t Ar seconds
-Specifies the idle timeout for client connections.
+.It Fl t Ar timeout
+Specifies the idle timeout for client connections,
+in seconds.
 The default timeout is 120 seconds.
 .El
 .\" .Sh SEE ALSO
+.Sh STANDARDS
+.Rs
+.%A M. St. Johns
+.%D February 1993
+.%R RFC 1413
+.%T Identification Protocol
+.Re
 .Sh HISTORY
 The
 .Nm
