--- a/src/usr.bin/tic/tic.1
+++ b/src/usr.bin/tic/tic.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: tic.1,v 1.14 2010/01/12 23:22:14 nicm Exp $
+.\" $OpenBSD: tic.1,v 1.15 2010/09/02 09:00:01 sobrado Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2005,2006 Free Software Foundation, Inc.              *
@@ -31,7 +31,7 @@
 .\" $Id$
 .TH tic 1 ""
 .ds n 5
-.ds d /usr/share/misc/terminfo
+.ds d /usr/share/terminfo
 .SH NAME
 \fBtic\fR - the \fIterminfo\fR entry-description compiler
 .SH SYNOPSIS
