--- a/src/share/man/man5/bsd.port.mk.5
+++ b/src/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.370 2013/03/10 22:27:41 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.371 2013/03/21 08:30:29 ajacoutot Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: March 10 2013 $
+.Dd $Mdocdate: March 21 2013 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -43,8 +43,7 @@ also uses quite a few helper scripts.
 Those live under
 .Pa ${PORTSDIR}/infrastructure/bin ,
 and they do have manpages under
-.Pa ${PORTSDIR}/infrastructure/man ,
-which is not currently part of the default manpath.
+.Pa ${PORTSDIR}/infrastructure/man.
 .Pp
 Other BSD variants, as well as older versions of
 .Nm bsd.port.mk ,
