--- a/src/bin/pax/pax.1
+++ b/src/bin/pax/pax.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pax.1,v 1.60 2010/09/03 09:53:20 jmc Exp $
+.\"	$OpenBSD: pax.1,v 1.61 2010/09/19 20:55:25 jmc Exp $
 .\"	$NetBSD: pax.1,v 1.3 1995/03/21 09:07:37 cgd Exp $
 .\"
 .\" Copyright (c) 1992 Keith Muller.
@@ -34,7 +34,7 @@
 .\"
 .\"	@(#)pax.1	8.4 (Berkeley) 4/18/94
 .\"
-.Dd $Mdocdate: September 3 2010 $
+.Dd $Mdocdate: September 19 2010 $
 .Dt PAX 1
 .Os
 .Sh NAME
@@ -487,10 +487,12 @@ In general,
 take the form:
 .Ar name Ns = Ns Ar value .
 .Pp
-The following options are available for the old
+The following options are available for the
+.Em ustar
+and old
 .Bx
 .Em tar
-format:
+formats:
 .Pp
 .Bl -tag -width Ds -compact
 .It Cm nodir
