--- a/src/share/man/man8/man8.mvme68k/MAKEDEV.8
+++ b/src/share/man/man8/man8.mvme68k/MAKEDEV.8
@@ -4,7 +4,7 @@
 .\" generated from:
 .\"
 .\"	OpenBSD: etc.mvme68k/MAKEDEV.md,v 1.32 2012/08/23 06:15:28 deraadt Exp 
-.\"	OpenBSD: MAKEDEV.common,v 1.60 2012/08/23 06:15:28 deraadt Exp 
+.\"	OpenBSD: MAKEDEV.common,v 1.63 2013/03/28 21:20:46 jmc Exp 
 .\"	OpenBSD: MAKEDEV.man,v 1.7 2009/03/18 17:34:25 sobrado Exp 
 .\"	OpenBSD: MAKEDEV.mansub,v 1.2 2004/02/20 19:13:01 miod Exp 
 .\"
@@ -188,7 +188,7 @@ VMEbus D16 space, see
 .Xr vmes 4 .
 .It Ar vscsi*
 Virtual SCSI controller, see
-.Xr vscsi 8 .
+.Xr vscsi 4 .
 .El
 .Sh FILES
 .Bl -tag -width /dev -compact
