--- a/src/distrib/notes/octeon/install
+++ b/src/distrib/notes/octeon/install
@@ -1,4 +1,4 @@
-dnl	$OpenBSD$
+dnl	$OpenBSD: install,v 1.1 2013/04/01 13:02:48 jasper Exp $
 OpenBSDInstallPrelude
 
 Booting the installation media:
@@ -91,8 +91,6 @@ OpenBSDCommonInstall
 
 OpenBSDInstallWrapup
 
-CAM-0100 systems final steps:
-
-	XXX
+dnl CAM-0100 systems final steps:
 
 OpenBSDCongratulations
