--- a/src/sbin/newfs_ext2fs/newfs_ext2fs.8
+++ b/src/sbin/newfs_ext2fs/newfs_ext2fs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: newfs_ext2fs.8,v 1.4 2010/02/18 12:32:00 jmc Exp $
+.\"	$OpenBSD: newfs_ext2fs.8,v 1.5 2010/03/14 11:29:48 ajacoutot Exp $
 .\"	$NetBSD: newfs_ext2fs.8,v 1.7 2009/12/01 08:47:25 pooka Exp $
 .\"
 .\" Copyright (c) 1983, 1987, 1991, 1993, 1994
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)newfs.8	8.6 (Berkeley) 5/3/95
 .\"
-.Dd $Mdocdate: February 18 2010 $
+.Dd $Mdocdate: March 14 2010 $
 .Dt NEWFS_EXT2FS 8
 .Os
 .Sh NAME
@@ -157,7 +157,7 @@ Select the filesystem-format.
 .It 0
 .Ql GOOD_OLD_REV ;
 this option is primarily used to build root file systems that can be
-understood by old or dumb firmwares for bootstrap.
+understood by old or dumb firmware for bootstrap.
 (default)
 .It 1
 .Ql DYNAMIC_REV ;
