--- a/src/usr.sbin/identd/identd.8
+++ b/src/usr.sbin/identd/identd.8
@@ -1,4 +1,4 @@
-.\"   $OpenBSD: identd.8,v 1.2 2013/03/18 08:55:31 dlg Exp $
+.\"   $OpenBSD: identd.8,v 1.3 2013/03/18 17:09:11 jmc Exp $
 .\"
 .\" Copyright (c) 2013 David Gwynne <dlg@openbsd.org>
 .\"
@@ -56,6 +56,14 @@ Listen on the specified address.
 By default
 .Nm
 listens on wildcard addresses.
+.It Fl N
+When replying with a user name or ID, first
+check for a file
+.Pa .noident
+in the user's home directory.
+If this file is accessible, return
+.Dq HIDDEN-USER
+instead of the normal USERID response.
 .It Fl p Ar port
 Listen on the specified port.
 By default
