--- a/src/usr.sbin/identd/identd.8
+++ b/src/usr.sbin/identd/identd.8
@@ -1,4 +1,4 @@
-.\"   $OpenBSD: identd.8,v 1.5 2013/04/23 01:55:45 dlg Exp $
+.\"   $OpenBSD: identd.8,v 1.6 2013/04/23 05:37:35 dlg Exp $
 .\"
 .\" Copyright (c) 2013 David Gwynne <dlg@openbsd.org>
 .\"
@@ -22,7 +22,7 @@
 .Nd Identification Protocol daemon
 .Sh SYNOPSIS
 .Nm
-.Op Fl 46d
+.Op Fl 46dNn
 .Op Fl l Ar address
 .Op Fl t Ar timeout
 .Ar directory
