--- a/src/usr.sbin/identd/identd.8
+++ b/src/usr.sbin/identd/identd.8
@@ -1,4 +1,4 @@
-.\"   $OpenBSD: identd.8,v 1.7 2013/04/23 05:38:20 dlg Exp $
+.\"   $OpenBSD: identd.8,v 1.8 2013/04/23 05:43:04 dlg Exp $
 .\"
 .\" Copyright (c) 2013 David Gwynne <dlg@openbsd.org>
 .\"
@@ -22,7 +22,7 @@
 .Nd Identification Protocol daemon
 .Sh SYNOPSIS
 .Nm
-.Op Fl 46dNn
+.Op Fl 46deNn
 .Op Fl l Ar address
 .Op Fl t Ar timeout
 .Sh DESCRIPTION
@@ -49,6 +49,14 @@ Do not daemonize.
 If this option is specified,
 .Nm
 will run in the foreground and log to stderr.
+.It Fl e
+Always return
+.Dq UNKNOWN-ERROR
+instead of the
+.Dq NO-USER
+or
+.Dq INVALID-PORT
+errors.
 .It Fl l Ar address
 Listen on the specified address.
 By default
