--- a/src/share/man/man9/tvtohz.9
+++ b/src/share/man/man9/tvtohz.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tvtohz.9,v 1.5 2010/08/20 22:03:22 matthew Exp $
+.\"	$OpenBSD: tvtohz.9,v 1.6 2013/04/24 17:29:02 matthew Exp $
 .\"
 .\" Copyright (c) 1999 Marc Espie
 .\" All rights reserved.
@@ -23,7 +23,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 20 2010 $
+.Dd $Mdocdate: April 24 2013 $
 .Dt TVTOHZ 9
 .Os
 .Sh NAME
@@ -46,7 +46,8 @@ and
 functions compute the number of
 .Va hz
 in the specified amount of time.
-These are mainly used to translate a timeval or timespec
+They are mainly used to translate a timeval or timespec,
+respectively,
 into a suitable argument for
 .Xr timeout 9 .
 .Sh CODE REFERENCES
