--- a/src/share/man/man3/intro.3
+++ b/src/share/man/man3/intro.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.3,v 1.53 2012/09/25 19:54:02 brad Exp $
+.\"	$OpenBSD: intro.3,v 1.54 2013/03/14 04:03:47 lteo Exp $
 .\"	$NetBSD: intro.3,v 1.5 1995/05/10 22:46:24 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"     @(#)intro.3	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate: September 25 2012 $
+.Dd $Mdocdate: March 14 2013 $
 .Dt INTRO 3
 .Os
 .Sh NAME
@@ -447,8 +447,6 @@ See
 .It libamd64 Pq Fl lamd64
 AMD64 I/O and memory access functions.
 See
-.Xr amd64_get_ioperm 2
-and
 .Xr amd64_iopl 2 .
 .It libarm Pq Fl larm
 ARM I/O and memory access functions.
