--- a/src/share/man/man4/run.4
+++ b/src/share/man/man4/run.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: run.4,v 1.36 2013/02/14 07:40:42 jmc Exp $
+.\" $OpenBSD: run.4,v 1.37 2013/03/10 07:02:54 tedu Exp $
 .\"
 .\" Copyright (c) 2008 Damien Bergamini <damien.bergamini@free.fr>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: February 14 2013 $
+.Dd $Mdocdate: March 10 2013 $
 .Dt RUN 4
 .Os
 .Sh NAME
@@ -114,6 +114,7 @@ The following adapters should work:
 .It D-Link DWA-140
 .It DrayTek Vigor N61
 .It Edimax EW-7711UAn
+.It Edimax EW-7711USn
 .It Edimax EW-7711UTn
 .It Edimax EW-7717Un
 .It Edimax EW-7718Un
