--- a/src/usr.bin/ssh/sshd_config.5
+++ b/src/usr.bin/ssh/sshd_config.5
@@ -33,8 +33,8 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: sshd_config.5,v 1.158 2013/04/19 01:00:10 djm Exp $
-.Dd $Mdocdate: April 19 2013 $
+.\" $OpenBSD: sshd_config.5,v 1.159 2013/05/16 04:09:14 dtucker Exp $
+.Dd $Mdocdate: May 16 2013 $
 .Dt SSHD_CONFIG 5
 .Os
 .Sh NAME
@@ -1028,8 +1028,7 @@ depending on the cipher.
 The optional second value is specified in seconds and may use any of the
 units documented in the
 .Sx TIME FORMATS
-section of
-.Xr sshd_config 5 .
+section.
 The default value for
 .Cm RekeyLimit
 is
