--- a/src/share/man/man4/man4.mvme88k/ie.4
+++ b/src/share/man/man4/man4.mvme88k/ie.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ie.4,v 1.5 2006/11/08 03:56:52 brad Exp $
+.\"	$OpenBSD: ie.4,v 1.6 2007/05/31 19:19:55 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -25,14 +25,14 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt IE 4 mvme88k
 .Os
 .Sh NAME
 .Nm ie
 .Nd Intel i82596 Ethernet device
 .Sh SYNOPSIS
-.Cd "ie0 at pcctwo0 offset 0x46000 ipl 1"
+.Cd "ie0 at pcctwo0 offset 0x46000 ipl 3"
 .Sh DESCRIPTION
 The
 .Nm
