--- a/src/share/man/man4/man4.mvme88k/pcctwo.4
+++ b/src/share/man/man4/man4.mvme88k/pcctwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pcctwo.4,v 1.6 2007/05/31 19:19:55 jmc Exp $
+.\"	$OpenBSD: pcctwo.4,v 1.7 2013/05/18 11:26:01 miod Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: May 18 2013 $
 .Dt PCCTWO 4 mvme88k
 .Os
 .Sh NAME
@@ -71,7 +71,8 @@ Host interface to
 Symbios/NCR 53C710 SCSI controller
 .It
 Interface to the
-.Xr memc 4
+.\" .Xr memc 4
+memc
 Memory controller ASIC
 .El
 .Sh SEE ALSO
