--- a/src/share/man/man4/utpms.4
+++ b/src/share/man/man4/utpms.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: tpms.4,v 1.5 2007/05/31 19:19:55 jmc Exp $
+.\" $OpenBSD: tpms.4,v 1.6 2008/06/26 05:42:07 ray Exp $
 .\"
 .\" Copyright (c) 1999, 2001 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,8 +27,8 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
-.Dt TPMS 4 macppc
+.Dd $Mdocdate: June 26 2008 $
+.Dt TPMS 4
 .Os
 .Sh NAME
 .Nm tpms
