--- a/src/usr.bin/mg/mg.1
+++ b/src/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.79 2013/05/31 18:03:44 lum Exp $
+.\"	$OpenBSD: mg.1,v 1.80 2013/06/01 14:47:07 lum Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: May 31 2013 $
+.Dd $Mdocdate: June 1 2013 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -900,7 +900,8 @@ upper case.
 Move the cursor forward by the specified number of words.
 As it moves, convert any characters to upper case.
 .It visible-bell
-Toggle the visible bell. If this toggle is on, the modeline will flash.
+Toggle the visible bell.
+If this toggle is on, the modeline will flash.
 .It visit-tags-table
 Record name of the tags file to be used for subsequent find-tag.
 .It what-cursor-position
